REF refactoring code